[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Tela_venceu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Efeitos_sonoros/Interface/COLORALPHA 50 Menu Interface SFX/WAV/MI_SFX 02.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Pontuacao_moedas.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Tela_venceu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 472.0
margin_bottom = 248.0
color = Color( 0, 0, 0, 1 )

[node name="Texto" type="Label" parent="."]
margin_left = 224.0
margin_top = 80.0
margin_right = 288.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "Win!"

[node name="Texto_pontuacao" type="Label" parent="."]
margin_left = 152.0
margin_top = 128.0
margin_right = 248.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
text = "Score:"

[node name="Pontuacao_moeda" type="Label" parent="."]
margin_left = 288.0
margin_top = 128.0
margin_right = 304.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 2 )
text = "0
"
script = ExtResource( 4 )

[node name="Botao_reiniciar" type="Button" parent="."]
margin_left = 96.0
margin_top = 216.0
margin_right = 208.0
margin_bottom = 236.0
custom_colors/font_color_disabled = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.780392, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Restart"

[node name="Botao_sair" type="Button" parent="."]
margin_left = 240.0
margin_top = 216.0
margin_right = 304.0
margin_bottom = 236.0
custom_colors/font_color_disabled = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.780392, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Quit"

[node name="Botao_menu" type="Button" parent="."]
margin_left = 339.0
margin_top = 216.0
margin_right = 403.0
margin_bottom = 236.0
custom_colors/font_color_disabled = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0.780392, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0.780392, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
text = "Menu"

[node name="Som_pressionou" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="Botao_reiniciar" to="." method="_on_Botao_reiniciar_pressed"]
[connection signal="pressed" from="Botao_sair" to="." method="_on_Botao_sair_pressed"]
[connection signal="pressed" from="Botao_menu" to="." method="_on_Botao_menu_pressed"]
